--- a/Loactionmap.html
+++ b/Loactionmap.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- Destination, time, area where you will use the charger, contact into-->
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <title>Location Map</title>
+    <link href="Locationmap.css" rel="stylesheet" type="text/css"/>
 </head>
+
+
 <body>
+    <div id="header">
+
+        <h3 style="text-align: center; font-size: 40px; font-family: serif; color: white; ">Location Map</h3>
+
+    </div>
+
+    <div id="picture" >
+
+    </div>
+    <button style="height: 50px; width: 400px; font-size: 30px; background-color: rgba(0, 255, 255, 0.65); font-family: serif; color: white; float: right; ">Make A Reservation</button>
 
 </body>
+
 </html>
