The links to the pages.

--- a/Loactionmap.html
+++ b/Loactionmap.html
@@ -18,7 +18,7 @@
     <div id="picture" >
         <img src="http://i.imgur.com/XT72STK.png?1" style="height:900px">
     </div>
-    <button style="height: 50px; width: 400px; font-size: 30px; background-color: rgba(0, 255, 255, 0.65); font-family: serif; color: white; float: right; ">Make A Reservation</button>
+    <button style="height: 50px; width: 400px; font-size: 30px; background-color: rgba(0, 255, 255, 0.65); font-family: serif; color: white; float: right; "><a href="Reservationpage.html">Make A Reservation</a></button>
 
 </body>
 
