--- a/LoginPage.html
+++ b/LoginPage.html
@@ -24,7 +24,7 @@
 </div>
 
 <div id="button">
-    <button style="height: 50px; width: 200px; font-size: 30px; background-color: rgba(0, 255, 255, 0.65); font-family: serif; color: white; align-content:center ; ">Submit</button>
+    <button style="height: 50px; width: 200px; font-size: 30px; background-color: rgba(0, 255, 255, 0.65); font-family: serif; color: white; align-content:center ; "><a href="Loactionmap.html">Submit</a></button>
 </div>
 
 
