--- a/Homepage.html
+++ b/Homepage.html
@@ -77,13 +77,13 @@
     <br>
     <div id="signIn">
 
-        <button  style="height: 100px; width: 450px; font-size: 30px; background-color: rgba(0, 255, 255, 0.65); font-family: serif; color: white;"><a href="Signinpage.html">Sign In</a></button>
+        <button  style="height: 100px; width: 450px; font-size: 30px; background-color: rgba(0, 255, 255, 0.65); font-family: serif; color: white;"><a href="Signinpage.php">Sign In</a></button>
 
     </div>
 
     <div id="logIn">
 
-        <button style="height: 100px; width: 450px; font-size: 30px; background-color: rgba(0, 255, 255, 0.65); font-family: serif; color: white; "><a href="LoginPage.html">Log In</a></button>
+        <button style="height: 100px; width: 450px; font-size: 30px; background-color: rgba(0, 255, 255, 0.65); font-family: serif; color: white; "><a href="LoginPage.php">Log In</a></button>
     </div>
 
 
